--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,32 +1,20 @@
-# api:
-#   build: .
-  # links:
-  #   - 'kafka:kafka'
-  # environment:
-  #   NODE_ENV: 'development'
-  # volumes:
-  #   - .:/app
-  #   - /app/node_modules
-  # ports:
-  #   - "0.0.0.0:9000:9000"
-  # command: pm2 --no-daemon start
-
-# kafka:
-#   image: landoop/fast-data-dev
-#   ports:
-#     - "2181:2181"
-#     - "3030:3030"
-#     - "8081:8081"
-#     - "8082:8082"
-#     - "8083:8083"
-#     - "9092:9092"
-#   environment:
-#     ADV_HOST: '127.0.0.1'
-
 services:
   build: .
+  links:
+    - 'kafka:kafka'
   volumes:
     - .:/app
-    - /app/node_modules
-  command: pm2 --no-daemon start
+    - ./node_modules:/app/node_modules
+  command: pm2 --no-daemon start process.json
   
+kafka:
+  image: landoop/fast-data-dev
+  ports:
+    - "2181:2181"
+    - "3030:3030"
+    - "8081:8081"
+    - "8082:8082"
+    - "8083:8083"
+    - "9092:9092"
+  environment:
+    ADV_HOST: '127.0.0.1'
