--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,20 +1,22 @@
+version: '2'
 services:
-  build: .
-  links:
-    - 'kafka:kafka'
-  volumes:
-    - .:/app
-    - ./node_modules:/app/node_modules
-  command: pm2 --no-daemon start process.json
-  
-kafka:
-  image: landoop/fast-data-dev
-  ports:
-    - "2181:2181"
-    - "3030:3030"
-    - "8081:8081"
-    - "8082:8082"
-    - "8083:8083"
-    - "9092:9092"
-  environment:
-    ADV_HOST: '127.0.0.1'
+  app:
+    build: .
+    # links:
+    #   - 'kafka'
+    volumes:
+      - .:/app
+      - ./node_modules:/app/node_modules
+    command: pm2 --no-daemon start process.json
+    
+  kafka:
+    image: landoop/fast-data-dev
+    ports:
+      - "2181:2181" # ZK
+      - "3030:3030" # UI
+      - "8081:8081" 
+      - "8082:8082"
+      - "8083:8083"
+      - "9092:9092" # Broker
+    environment:
+      ADV_HOST: 'kafka'
