--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,8 +2,8 @@ version: '2'
 services:
   app:
     build: .
-    # links:
-    #   - 'kafka'
+    ports:
+      - "3001:3001"
     volumes:
       - .:/app
       - ./node_modules:/app/node_modules
