add mongodb to docker compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,3 +29,9 @@ services:
       - "9092:9092" # Broker
     environment:
       ADV_HOST: 'kafka'
+
+  mongo:
+    image: mvertes/alpine-mongo:3.2.1
+    ports:
+      - "27017"
+    command: ["mongod"]
