WIP change docker compose to execute sh file

--- a/orderingService/Dockerfile
+++ b/orderingService/Dockerfile
@@ -8,3 +8,7 @@ RUN npm install -g  pm2@3.0.0 typescript@2.6 tslint mocha yarn
 ADD ./package.json .
 ADD ./yarn.lock .
 RUN yarn
+
+ADD ./start.sh .
+RUN ["chmod", "+x", "start.sh"]
+
