--- a/shipmentService/package.json
+++ b/shipmentService/package.json
@@ -19,5 +19,9 @@
   "dependencies": {
     "express": "^4.16.3",
     "kafka-node": "^2.6.1"
+  },
+  "devDependencies": {
+    "@types/express": "^4.16.0",
+    "@types/kafka-node": "^2.0.6"
   }
 }
