add nohup output to git ignore

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,8 @@
 
 /shipmentService/node_modules
 /shipmentService/dist
+/shipmentService/nohup.out
 
 /orderingService/node_modules
 /orderingService/dist
+/orderingService/nohup.out
