--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,14 +9,14 @@ services:
     volumes:
       - ./orderingService:/app
       - ./orderingService/node_modules:/app/node_modules
-    command: sh -c "mkdir -p dist && touch ./dist/app.js && nohup tsc -w && pm2 --no-daemon start process.json"
+    command: sh ./entrypoint.sh
 
   shipment:
     build: ./shipmentService
     volumes:
       - ./shipmentService:/app
       - ./shipmentService/node_modules:/app/node_modules
-    command: pm2 --no-daemon start process.json
+    command: sh ./entrypoint.sh
 
   kafka:
     image: landoop/fast-data-dev
@@ -30,8 +30,8 @@ services:
     environment:
       ADV_HOST: 'kafka'
 
-  mongo:
-    image: mvertes/alpine-mongo:3.2.1
-    ports:
-      - "27017"
-    command: ["mongod"]
+  # mongo:
+  #   image: mvertes/alpine-mongo:3.2.1
+  #   ports:
+  #     - "27017"
+  #   command: ["mongod"]
