--- a/shipmentService/Dockerfile
+++ b/shipmentService/Dockerfile
@@ -8,3 +8,6 @@ RUN npm install -g  pm2@3.0.0 typescript@2.6 tslint mocha yarn
 ADD ./package.json .
 ADD ./yarn.lock .
 RUN yarn
+
+ADD ./entrypoint.sh .
+RUN chmod +x /app/entrypoint.sh
