--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,17 +18,17 @@ services:
       - ./shipmentService/node_modules:/app/node_modules
     command: sh ./entrypoint.sh
 
-  kafka:
-    image: landoop/fast-data-dev
-    ports:
-      - "2181:2181" # ZK
-      - "3030:3030" # UI
-      - "8081:8081" 
-      - "8082:8082"
-      - "8083:8083"
-      - "9092:9092" # Broker
-    environment:
-      ADV_HOST: 'kafka'
+  # kafka:
+  #   image: landoop/fast-data-dev
+  #   ports:
+  #     - "2181:2181" # ZK
+  #     - "3030:3030" # UI
+  #     - "8081:8081" 
+  #     - "8082:8082"
+  #     - "8083:8083"
+  #     - "9092:9092" # Broker
+  #   environment:
+  #     ADV_HOST: 'kafka'
 
   # mongo:
   #   image: mvertes/alpine-mongo:3.2.1
