--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,25 +10,31 @@ services:
       - ./orderingService:/app
       - ./orderingService/node_modules:/app/node_modules
     command: sh ./entrypoint.sh
+    environment:
+      - API_PORT=3001
 
   shipment:
     build: ./shipmentService
+    ports:
+      - "3002:3002"
     volumes:
       - ./shipmentService:/app
       - ./shipmentService/node_modules:/app/node_modules
     command: sh ./entrypoint.sh
+    environment:
+      - API_PORT=3002
 
-  # kafka:
-  #   image: landoop/fast-data-dev
-  #   ports:
-  #     - "2181:2181" # ZK
-  #     - "3030:3030" # UI
-  #     - "8081:8081" 
-  #     - "8082:8082"
-  #     - "8083:8083"
-  #     - "9092:9092" # Broker
-  #   environment:
-  #     ADV_HOST: 'kafka'
+  kafka:
+    image: landoop/fast-data-dev
+    ports:
+      - "2181:2181" # ZK
+      - "3030:3030" # UI
+      - "8081:8081" 
+      - "8082:8082"
+      - "8083:8083"
+      - "9092:9092" # Broker
+    environment:
+      ADV_HOST: 'kafka'
 
   # mongo:
   #   image: mvertes/alpine-mongo:3.2.1
