update module alias to point to dist folder

--- a/orderingService/package.json
+++ b/orderingService/package.json
@@ -26,7 +26,7 @@
     "@types/kafka-node": "^2.0.6"
   },
   "_moduleAliases": {
-    "@root": ".",
-    "@repository": "repository"
+    "@root": "./dist",
+    "@repository": "./dist/repository"
   }
 }
