--- a/orderingService/package.json
+++ b/orderingService/package.json
@@ -19,9 +19,11 @@
   "dependencies": {
     "express": "^4.16.3",
     "kafka-node": "^2.6.1",
-    "module-alias": "^2.1.0"
+    "module-alias": "^2.1.0",
+    "uuid": "^3.3.2"
   },
   "devDependencies": {
+    "@types/uuid": "^3.4.3",
     "@types/express": "^4.16.0",
     "@types/kafka-node": "^2.0.6"
   },
