--- a/orderingService/package.json
+++ b/orderingService/package.json
@@ -20,12 +20,15 @@
     "express": "^4.16.3",
     "kafka-node": "^2.6.1",
     "module-alias": "^2.1.0",
+    "mongoose": "^5.2.5",
     "uuid": "^3.3.2"
   },
   "devDependencies": {
-    "@types/uuid": "^3.4.3",
     "@types/express": "^4.16.0",
-    "@types/kafka-node": "^2.0.6"
+    "@types/kafka-node": "^2.0.6",
+    "@types/mongodb": "^3.1.2",
+    "@types/mongoose": "^5.2.2",
+    "@types/uuid": "^3.4.3"
   },
   "_moduleAliases": {
     "@root": "./dist",
