--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,61 @@ version: '3'
 
 services:
 
+  # API Gateway
+  kong:
+    restart: always
+    image: kong:0.14.0-alpine
+    depends_on:
+      - kong-database
+    ports:
+      - "8000:8000"
+      - "8001:8001"
+      - "8443:8443"
+      - "8444:8444"
+      - "7946:7946"
+      - "7946:7946/udp"
+    environment:
+      - KONG_DATABASE=postgres
+      - KONG_PG_HOST=kong-database
+      - KONG_PG_DATABASE=kong
+      - KONG_LOG_LEVEL=info
+      - KONG_ADMIN_LISTEN=0.0.0.0:8001
+      - KONG_ADMIN_LISTEN_SSL=0.0.0.0:8444
+    # healthcheck:
+    #   test: ["CMD-SHELL", "curl -I -s -L http://127.0.0.1:8000 || exit 1"]
+    #   interval: 5s
+    #   retries: 10
+
+  kong-migration:
+    image: kong
+    depends_on:
+      - kong-database
+    environment:
+      - KONG_DATABASE=postgres
+      - KONG_PG_HOST=kong-database
+    command: kong migrations up
+
+  kong-database:
+    # restart: on-failure
+    image: "postgres:9.5"
+    environment:
+      - POSTGRES_USER=kong              
+      - POSTGRES_DB=kong
+    ports:
+      - "5432:5432"
+    # healthcheck:
+    #   test: ["CMD", "pg_isready", "-U", "postgres"]
+    #   interval: 10s
+    #   timeout: 5s
+    #   retries: 5
+
+  dashboard:
+    depends_on:
+      - kong
+    image: pgbi/kong-dashboard:v2
+    ports: 
+      - "8080:8080"
+
   ordering:
     build: ./orderingService
     ports:
