--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3'
+version: '2.1'
 
 services:
 
@@ -7,7 +7,8 @@ services:
     restart: always
     image: kong:0.14.0-alpine
     depends_on:
-      - kong-database
+      kong-database:
+        condition: service_healthy
     ports:
       - "8000:8000"
       - "8001:8001"
@@ -22,77 +23,79 @@ services:
       - KONG_LOG_LEVEL=info
       - KONG_ADMIN_LISTEN=0.0.0.0:8001
       - KONG_ADMIN_LISTEN_SSL=0.0.0.0:8444
-    # healthcheck:
-    #   test: ["CMD-SHELL", "curl -I -s -L http://127.0.0.1:8000 || exit 1"]
-    #   interval: 5s
-    #   retries: 10
+    healthcheck:
+      test: ["CMD-SHELL", "curl -I -s -L http://127.0.0.1:8000 || exit 1"]
+      interval: 5s
+      retries: 10
 
   kong-migration:
     image: kong
+    restart: on-failure
     depends_on:
-      - kong-database
+      kong-database:
+        condition: service_healthy
     environment:
       - KONG_DATABASE=postgres
       - KONG_PG_HOST=kong-database
     command: kong migrations up
 
   kong-database:
-    # restart: on-failure
     image: "postgres:9.5"
     environment:
       - POSTGRES_USER=kong              
       - POSTGRES_DB=kong
     ports:
       - "5432:5432"
-    # healthcheck:
-    #   test: ["CMD", "pg_isready", "-U", "postgres"]
-    #   interval: 10s
-    #   timeout: 5s
-    #   retries: 5
+    healthcheck:
+      test: ["CMD", "pg_isready", "-U", "postgres"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
 
   dashboard:
-    depends_on:
-      - kong
     image: pgbi/kong-dashboard:v2
+    depends_on:
+      kong:
+        condition: service_healthy
     ports: 
       - "8080:8080"
 
-  ordering:
-    build: ./orderingService
-    ports:
-      - "3001:3001"
-    volumes:
-      - ./orderingService:/app
-      - ./orderingService/node_modules:/app/node_modules
-    command: sh ./entrypoint.sh
-    environment:
-      - API_PORT=3001
+  # ordering:
+  #   build: ./orderingService
+  #   ports:
+  #     - "3001:3001"
+  #   volumes:
+  #     - ./orderingService:/app
+  #     - ./orderingService/node_modules:/app/node_modules
+  #   command: sh ./entrypoint.sh
+  #   environment:
+  #     - API_PORT=3001
 
-  shipment:
-    build: ./shipmentService
-    ports:
-      - "3002:3002"
-    volumes:
-      - ./shipmentService:/app
-      - ./shipmentService/node_modules:/app/node_modules
-    command: sh ./entrypoint.sh
-    environment:
-      - API_PORT=3002
+  # shipment:
+  #   build: ./shipmentService
+  #   ports:
+  #     - "3002:3002"
+  #   volumes:
+  #     - ./shipmentService:/app
+  #     - ./shipmentService/node_modules:/app/node_modules
+  #   command: sh ./entrypoint.sh
+  #   environment:
+  #     - API_PORT=3002
 
-  kafka:
-    image: landoop/fast-data-dev
-    ports:
-      - "2181:2181" # ZK
-      - "3030:3030" # UI
-      - "8081:8081" 
-      - "8082:8082"
-      - "8083:8083"
-      - "9092:9092" # Broker
-    environment:
-      ADV_HOST: 'kafka'
+  # kafka:
+  #   image: landoop/fast-data-dev
+  #   ports:
+  #     - "2181:2181" # ZK
+  #     - "3030:3030" # UI
+  #     - "8081:8081" 
+  #     - "8082:8082"
+  #     - "8083:8083"
+  #     - "9092:9092" # Broker
+  #   environment:
+  #     ADV_HOST: 'kafka'
 
-  mongo:
-    image: mvertes/alpine-mongo:3.2.1
-    ports:
-      - "27017"
-    command: ["mongod"]
+  # mongo:
+  #   image: mvertes/alpine-mongo:3.2.1
+  #   ports:
+  #     - "27017"
+  #   command: ["mongod"]
