--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -60,42 +60,45 @@ services:
     ports: 
       - "8080:8080"
 
-  # ordering:
-  #   build: ./orderingService
-  #   ports:
-  #     - "3001:3001"
-  #   volumes:
-  #     - ./orderingService:/app
-  #     - ./orderingService/node_modules:/app/node_modules
-  #   command: sh ./entrypoint.sh
-  #   environment:
-  #     - API_PORT=3001
+  ordering:
+    build: ./orderingService
+    ports:
+      - "3001:3001"
+    depends_on:
+      kong:
+        condition: service_healthy
+    volumes:
+      - ./orderingService:/app
+      - ./orderingService/node_modules:/app/node_modules
+    command: sh ./entrypoint.sh
+    environment:
+      - API_PORT=3001
 
-  # shipment:
-  #   build: ./shipmentService
-  #   ports:
-  #     - "3002:3002"
-  #   volumes:
-  #     - ./shipmentService:/app
-  #     - ./shipmentService/node_modules:/app/node_modules
-  #   command: sh ./entrypoint.sh
-  #   environment:
-  #     - API_PORT=3002
+  shipment:
+    build: ./shipmentService
+    ports:
+      - "3002:3002"
+    volumes:
+      - ./shipmentService:/app
+      - ./shipmentService/node_modules:/app/node_modules
+    command: sh ./entrypoint.sh
+    environment:
+      - API_PORT=3002
 
-  # kafka:
-  #   image: landoop/fast-data-dev
-  #   ports:
-  #     - "2181:2181" # ZK
-  #     - "3030:3030" # UI
-  #     - "8081:8081" 
-  #     - "8082:8082"
-  #     - "8083:8083"
-  #     - "9092:9092" # Broker
-  #   environment:
-  #     ADV_HOST: 'kafka'
+  kafka:
+    image: landoop/fast-data-dev
+    ports:
+      - "2181:2181" # ZK
+      - "3030:3030" # UI
+      - "8081:8081" 
+      - "8082:8082"
+      - "8083:8083"
+      - "9092:9092" # Broker
+    environment:
+      ADV_HOST: 'kafka'
 
-  # mongo:
-  #   image: mvertes/alpine-mongo:3.2.1
-  #   ports:
-  #     - "27017"
-  #   command: ["mongod"]
+  mongo:
+    image: mvertes/alpine-mongo:3.2.1
+    ports:
+      - "27017"
+    command: ["mongod"]
