update module alias

--- a/orderingService/package.json
+++ b/orderingService/package.json
@@ -33,6 +33,6 @@
   },
   "_moduleAliases": {
     "@root": "./dist",
-    "@repository": "./dist/repository"
+    "@repository": "./dist/infrastructure/repository"
   }
 }
