--- a/orderingService/tsconfig.json
+++ b/orderingService/tsconfig.json
@@ -4,7 +4,7 @@
     "baseUrl": "./",
     "paths": {
       "@root/*": ["*"],
-      "@repository/*" : ["repository/*"]
+      "@repository/*" : ["infrastructure/repository/*"],
     },
     "target": "es6",
     "module": "commonjs",
